--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: redis://redistogo:d778064441ef1e6d493f0f544cdbf449@spinyfin.redistogo.com:9732/
   channel_prefix: message_me_production
